[tool.poetry]
name = "pynoonlight"
version = "0.3.2"
description = "Create and update alarms for Noonlight"
authors = [
    "IceBotYT <icebotyt@outlook.com>",
]
license = "MIT"
readme = "README.md"

documentation = "https://IceBotYT.github.io/pynoonlight"
homepage = "https://IceBotYT.github.io/pynoonlight"
repository = "https://github.com/IceBotYT/pynoonlight"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "pynoonlight", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"
tenacity = "^8.0.1"
pydantic = "^1.9.2"
tzlocal = "^4.2"
pychalk = "2.0.1"
mkdocstrings-python = "^0.7.1"
validators = "^0.20.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = "*"
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"
types-requests = "^2.28.9"
pytest-asyncio = "^0.19.0"
types-tzlocal = "^4.2.2"
types-six = "^1.16.18"
types-setuptools = "^65.1.0"
griffe = "^0.22.0"
aioresponses = "^0.7.3"
pytest-socket = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov pynoonlight \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
